Ajustement html restaurants pour animation check

--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -28,130 +28,151 @@
                        <i class="fa-solid fa-heart" aria-hidden="true"></i>
                     </div>
                 </div>                                        
-                <div class="entrees">                    
-                    <h2 class="subtitle_lacarte">ENTRÉES</h2>               
-                        <div class="menu2">
-                            <h3 class="titre_menus2">Fricassées d'escargots</h3>
-                            <p class="subtitle_menus2">Au piment d'espellette</p>
-                            <p class="prix2">25<span class="euros2">€</span></p>
-                            <div class="div-vert2">                   
-                                <i class="fa-solid fa-check-circle double"></i>                                    
-                            </div>                          
-                        <div class="menu">
-                            <h3 class="titre_menus">Fricassées d'escargots</h3>
-                            <p class="subtitle_menus">Au piment d'espellette</p>
-                            <p class="prix">25<span class="euros">€</span></p>                                                                                                        
-                        </div>
-                        <div class="menu2">
-                            <h3 class="titre_menus2">Foie gras de canard mi-cuit</h3>
-                            <p class="subtitle_menus2">Et ses copeaux de truffe noire</p>
-                            <p class="prix2">35<span class="euros2">€</span></p>
-                            <div class="div-vert2">                        
-                                <i class="fa-solid fa-check-circle double"></i>
+                <ul class="entrees">                    
+                    <h2 class="subtitle_lacarte">ENTRÉES</h2> 
+                    <a href="#">             
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">                            
+                                <h3 class="titre_menus">Fricassées d'escargots</h3>
+                                <p class="subtitle_menus">Au piment d'espellette</p>
                             </div>
-                        <div class="menu">
-                            <h3 class="titre_menus">Foie gras de canard mi-cuit</h3>
-                            <p class="subtitle_menus">Et ses copeaux de truffe noire</p>
-                            <p class="prix">35<span class="euros">€</span></p>
-                        </div>
-                        <div class="menu2">
-                            <h3 class="titre_menus2">Œuf au plat</h3>
-                            <p class="subtitle_menus2">Assaisonné à la truffe sur lit de caviar</p>
-                            <p class="prix2">20<span class="euros2">€</span></p>
-                            <div class="div-vert2">                        
-                                <i class="fa-solid fa-check-circle double"></i>
+                            <div class="prix"> 
+                                <p class="prix-txt">25€</p>                           
                             </div>
-                        <div class="menu">
+                            <div class="check">                                                       
+                                <i class="fa-solid fa-check-circle"></i>                                    
+                            </div>
+                        </div>
+                    </li>                          
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Foie gras de canard mi-cuit</h3>
+                                <p class="subtitle_menus">Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">35€</p>
+                            </div>
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
                                 <h3 class="titre_menus">Œuf au plat</h3>
                                 <p class="subtitle_menus">Assaisonné à la truffe sur lit de caviar</p>
-                                <p class="prix">20<span class="euros">€</span></p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
                         </div>
-                </div>                                                     
-                <div class="plats">                    
+                    </li>
+                </ul>                                                     
+                <ul class="plats">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
-                        <div class="menu2">
-                            <h3 class="titre_menus2">Filet de bœuf aux herbes</h3>
-                            <p class="subtitle_menus2">Accompagné de sa ribambelle de légumes</p>
-                            <p class="prix2">40<span class="euros2">€</span></p>
-                            <div class="div-vert2">                        
-                                <i class="fa-solid fa-check-circle double"></i>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt"> 
+                                <h3 class="titre_menus">Filet de bœuf aux herbes</h3>
+                                <p class="subtitle_menus">Accompagné de sa ribambelle de légumes</p>
                             </div>
-                        <div class="menu">
-                            <h3 class="titre_menus">Filet de bœuf aux herbes</h3>
-                            <p class="subtitle_menus">Accompagné de sa ribambelle de légumes</p>
-                            <p class="prix">40<span class="euros">€</span></p>
-                        </div>
-                        <div class="menu2">
-                            <h3 class="titre_menus2">Parmentier de queue de bœuf</h3>
-                            <p class="subtitle_menus2">À la truffe noire sur sa purée de panais</p>
-                            <p class="prix2">35<span class="euros2">€</span></p>
-                            <div class="div-vert2">                        
-                                <i class="fa-solid fa-check-circle double"></i>
+                            <div class="prix">
+                                <p class="prix-txt">40€</p>
                             </div>
-                        <div class="menu">
-                            <h3 class="titre_menus">Parmentier de queue de bœuf</h3>
-                            <p class="subtitle_menus">À la truffe noire sur sa purée de panais</p>
-                            <p class="prix">35<span class="euros">€</span></p>
-                        </div>
-                        <div class="menu2">
-                            <h3 class="titre_menus2">Filet de turbot</h3>
-                            <p class="subtitle_menus2">Aux agrumes</p>
-                            <p class="prix2">44<span class="euros2">€</span></p>
-                            <div class="div-vert2">                        
-                                <i class="fa-solid fa-check-circle double"></i>
+                            <div class="check">
+                                <i class="fa-solid fa-check-circle"></i>
                             </div>
-                        <div class="menu">
-                            <h3 class="titre_menus">Filet de turbot</h3>
-                            <p class="subtitle_menus">Aux agrumes</p>
-                            <p class="prix">44<span class="euros">€</span></p>
                         </div>
-                </div>
-                <div class="desserts">                    
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Parmentier de queue de bœuf</h3>
+                                <p class="subtitle_menus">À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">35€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Filet de turbot</h3>
+                                <p class="subtitle_menus">Aux agrumes</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">44€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                </ul>
+                <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
-                        <div class="menu2">
-                            <h3 class="titre_menus2">Paris-Brest</h3>
-                            <p class="subtitle_menus2">Revisité</p>
-                            <p class="prix2">18<span class="euros2">€</span></p>
-                            <div class="div-vert2">                        
-                                <i class="fa-solid fa-check-circle double"></i>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Paris-Brest</h3>
+                                <p class="subtitle_menus">Revisité</p>
                             </div>
-                        <div class="menu">
-                            <h3 class="titre_menus">Paris-Brest</h3>
-                            <p class="subtitle_menus">Revisité</p>
-                            <p class="prix">18<span class="euros">€</span></p>
-                        </div>
-                        <div class="menu2">
-                            <h3 class="titre_menus2">Macaron au chocolat d'exception</h3>
-                            <p class="subtitle_menus2">Et glace à la vanille de Madagascar</p>
-                            <p class="prix2">22<span class="euros2">€</span></p>
-                            <div class="div-vert2">                        
-                                <i class="fa-solid fa-check-circle double"></i>
+                            <div class="prix">
+                                <p class="prix-txt">18€</p>
+                            </div>                                                                            
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
                             </div>
-                        <div class="menu">
-                            <h3 class="titre_menus">Macaron au chocolat d'exception</h3>
-                            <p class="subtitle_menus">Et glace à la vanille de Madagascar</p>
-                            <p class="prix">22<span class="euros">€</span></p>
-                        </div>
-                        <div class="menu2">
-                            <h3 class="titre_menus2">Mousse au chocolat </h3>
-                            <p class="subtitle_menus2">Au piment d'Espelette et à la truffe noire</p>
-                            <p class="prix2">23<span class="euros2">€</span></p>
-                            <div class="div-vert2">                        
-                                <i class="fa-solid fa-check-circle double"></i>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Macaron au chocolat d'exception</h3>
+                                <p class="subtitle_menus">Et glace à la vanille de Madagascar</p>
                             </div>
-                        <div class="menu">
-                            <h3 class="titre_menus">Mousse au chocolat </h3>
-                            <p class="subtitle_menus">Au piment d'Espelette et à la truffe noire</p>
-                            <p class="prix">23<span class="euros">€</span></p>
-                        </div>                
+                            <div class="prix">
+                                <p class="prix-txt">22€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Mousse au chocolat </h3>
+                                <p class="subtitle_menus">Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">23€</p>
+                            </div>                                                                           
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    </a>
+                </ul>
+
                 <div class="commander">
                     <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
                         <abbr class="glass">Commander</abbr></a>
                     </button>
-
+                    </a>
                 </div>
-                </a>
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
