Supression bordure du coeur au hover

--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -25,7 +25,7 @@
                 <div class="titre_lacarte_coeur">                
                     <h1 class="titre_lacarte">La palette du goût</h1>
                     <div class="coeur1">
-                       <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                       <i class="fa-solid fa-heart gris" aria-hidden="true"></i>
                     </div>
                 </div>                                        
                 <ul class="entrees">                    
