--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section>
         </main>
         <footer>
-            <p class="logo_footer">ohmyfood</p>
+            <img src="/Assets/Images/logo/ohmyfood.png" class="logo_footer" alt="logo.png"></img>
             <div class="footer-container">
                 <ul class="links">
                     <i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
