Mise à jour pages restaurant

--- a/Restaurants/restaurant2.html
+++ b/Restaurants/restaurant2.html
@@ -15,10 +15,10 @@
     <div class="main-container">
         <header>
             <div class="logopages">
-            <i class="fa-solid fa-left-long"></i>
+            <a href="/index.html"><i class="fa-solid fa-left-long"></i>
             <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
-            <img src="/Assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+            <img class="img-restaurant" src="/Assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
         </header> 
         <main>
             <section class="lacarte">
@@ -28,129 +28,151 @@
                         <i class="fa-solid fa-heart " aria-hidden="true"></i>
                     </div>
                 </div>                                       
-                <div class="entrees">                    
+                <ul class="entrees">                   
                     <h2 class="subtitle_lacarte">ENTRÉES</h2>
                     <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Tartare de thon</h3>
-                        <p class="subtitle_menus">Assaisonné au yuzu</p>
-                        <p class="prix">25<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Bouchée de homard croustillant</h3>
-                        <p class="subtitle_menus">Et sa farandole de petits légumes</p>
-                        <p class="prix">35<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
-                        <p class="subtitle_menus">Et sa crème de truffe</p>
-                        <p class="prix">40<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>                    
-                </div>                          
-                <div class="plats">                    
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt"> 
+                                <h3 class="titre_menus">Tartare de thon</h3>
+                                <p class="subtitle_menus">Assaisonné au yuzu</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">25€</p>                           
+                            </div>
+                            <div class="check">                                                       
+                                <i class="fa-solid fa-check-circle"></i>                                    
+                            </div>
+                        </div>
+                    </li>                          
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Bouchée de homard croustillant</h3>
+                                <p class="subtitle_menus">Et sa farandole de petits légumes</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">35€</p>
+                            </div>
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence </h3>
+                                <p class="subtitle_menus">Et sa crème de truffe</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">40€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                </ul>                                                     
+                <ul class="plats">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
-                        <p class="subtitle_menus">Et sa crème de truffe</p>
-                        <p class="prix">40<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt"> 
+                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence </h3>
+                                <p class="subtitle_menus">Et sa crème de truffe</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">40€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Langouste rôtie </h3>
+                                <p class="subtitle_menus">Et ses légumes de saison</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">35€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Côte de bœuf Angus </h3>
+                                <p class="subtitle_menus">Et sa purée de panais</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">44€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                </ul>
+                <ul class="desserts">                    
+                    <h2 class="subtitle_lacarte">DESSERTS</h2>                    
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Farandole de desserts</h3>
+                                <p class="subtitle_menus">Du chef</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">18€</p>
+                            </div>                                                                            
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Crème brulée </h3>
+                                <p class="subtitle_menus">Revisitée</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">22€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Tiramisu</h3>
+                                <p class="subtitle_menus">À la noisette</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">23€</p>
+                            </div>                                                                           
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
                     </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Langouste rôtie</h3>
-                        <p class="subtitle_menus">Et ses légumes de saison</p>
-                        <p class="prix">35<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Côte de bœuf Angus </h3>
-                        <p class="subtitle_menus">Et sa purée de panais</p>
-                        <p class="prix">44<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                </div>
-                <div class="desserts">                    
-                    <h2 class="subtitle_lacarte">DESSERTS</h2>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Farandole de desserts</h3>
-                        <p class="subtitle_menus">Du chef</p>
-                        <p class="prix">18<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Crème brulée </h3>
-                        <p class="subtitle_menus">Revisitée</p>
-                        <p class="prix">22<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>                       
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Tiramisu</h3>
-                        <p class="subtitle_menus">À la noisette</p>
-                        <p class="prix">23<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                </div>
-                <div class="commander">                        
+                </ul>
+
+                <div class="commander">
+                    <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
-                        <abbr class="glass">Commander</abbr>
+                        <abbr class="glass">Commander</abbr></a>
                     </button>
+                    </a>
                 </div>
-                </a>
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
