--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <a href="/Restaurants/restaurant2.html">
                     <article class="carte">
                         <div class="image-container">
-                            <img class="enchantee-img"  src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
+                            <img class="img-enchantee-accueil"  src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
                             <span class="image-txt">Nouveau</span>
                         </div>                     
                         <div class="carte-txt">    
