--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -15,154 +15,178 @@
     <div class="main-container">
         <header>
             <div class="logopages">
-            <i class="fa-solid fa-left-long"></i>
+            <a href="/index.html"><i class="fa-solid fa-left-long"></i></a>
             <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
-            <img src="/Assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond" class="enchantee">
+            <img class="img-enchantee" src="/Assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond" class="enchantee">
         </header> 
         <main>
             <section class="lacarte">
                 <div class="titre_lacarte_coeur">                
                     <h1 class="titre_lacarte">La note enchantée</h1>
                     <div class="coeur1">
-                        <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                       <i class="fa-solid fa-heart gris" aria-hidden="true"></i>
                     </div>
                 </div>                                        
-                <div class="entrees">                    
-                    <h2 class="subtitle_lacarte">ENTRÉES</h2>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Ravioles de foie gras </h3>
-                        <p class="subtitle_menus">Accompagnées de leur crème à la truffe</p>
-                        <p class="prix">25<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Caviar osciètre </h3>
-                        <p class="subtitle_menus">Sur blini à la farine de blé noir</p>
-                        <p class="prix">35<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Homard et espuma de potiron</h3>
-                        <p class="subtitle_menus">Marinés aux zestes d'orange</p>
-                        <p class="prix">20<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Foie gras de canard cuit entier</h3>
-                        <p class="subtitle_menus">Confiture de figue et pain toasté</p>
-                        <p class="prix">35<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>                       
-                </div>                                         
-                <div class="plats">                    
+                <ul class="entrees">                    
+                    <h2 class="subtitle_lacarte">ENTRÉES</h2> 
+                    <a href="#">             
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">                            
+                                <h3 class="titre_menus">Ravioles de foie gras </h3>
+                                <p class="subtitle_menus">Accompagnées de leur crème à la truffe</p>
+                            </div>
+                            <div class="prix"> 
+                                <p class="prix-txt">25€</p>                           
+                            </div>
+                            <div class="check">                                                       
+                                <i class="fa-solid fa-check-circle"></i>                                    
+                            </div>
+                        </div>
+                    </li>                          
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Caviar osciètre </h3>
+                                <p class="subtitle_menus">Sur blini à la farine de blé noir</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">35€</p>
+                            </div>
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Homard et espuma de potiron</h3>
+                                <p class="subtitle_menus">Marinés aux zestes d'orange</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Foie gras de canard cuit entier</h3>
+                                <p class="subtitle_menus">Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">35€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                </ul>                                                     
+                <ul class="plats">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Noix de coquilles Saint-Jacques</h3>
-                        <p class="subtitle_menus">Sur lit de purée de céleri-rave</p>
-                        <p class="prix">40<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt"> 
+                                <h3 class="titre_menus">Noix de coquilles Saint-Jacques</h3>
+                                <p class="subtitle_menus">Sur lit de purée de céleri-rave</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">40€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Langoustine poêlée</h3>
+                                <p class="subtitle_menus">Purée de patate douce</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">35€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Mijoté de queue de bœuf </h3>
+                                <p class="subtitle_menus">Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">45€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                </ul>
+                <ul class="desserts">                    
+                    <h2 class="subtitle_lacarte">DESSERTS</h2>                    
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Macaron noisette et chocolat</h3>
+                                <p class="subtitle_menus">Glace au caramel brun et sel de Guérande</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">18€</p>
+                            </div>                                                                            
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Baba au rhum revisité </h3>
+                                <p class="subtitle_menus">Avec son coulis de citron</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">22€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Tarte au citron meringuée</h3>
+                                <p class="subtitle_menus">Déstructurée</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">23€</p>
+                            </div>                                                                           
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
                     </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Langoustine poêlée</h3>
-                        <p class="subtitle_menus">Purée de patate douce</p>
-                        <p class="prix">35<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Mijoté de queue de bœuf</h3>
-                        <p class="subtitle_menus">Et riz sauvage aux zestes de citron</p>
-                        <p class="prix">45<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                </div>
-                <div class="desserts">                    
-                    <h2 class="subtitle_lacarte">DESSERTS</h2>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Macaron noisette et chocolat</h3>
-                        <p class="subtitle_menus">Glace au caramel brun et sel de Guérande</p>
-                        <p class="prix">18<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Baba au rhum revisité</h3>
-                        <p class="subtitle_menus">Avec son coulis de citron</p>
-                        <p class="prix">22<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>                       
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Tarte au citron meringuée</h3>
-                        <p class="subtitle_menus">Déstructurée</p>
-                        <p class="prix">23<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                </div>
-                <div class="commander">                        
+                </ul>
+
+                <div class="commander">
+                    <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
-                        <abbr class="glass">Commander</abbr>
+                        <abbr class="glass">Commander</abbr></a>
                     </button>
+                    </a>
                 </div>
-                </a>
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
