--- a/Restaurants/restaurant4.html
+++ b/Restaurants/restaurant4.html
@@ -15,142 +15,167 @@
     <div class="main-container">
         <header>
             <div class="logopages">
-            <i class="fa-solid fa-left-long"></i>
+            <a href="/index.html"><i class="fa-solid fa-left-long"></i></a>
             <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
-            <img src="/Assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+            <img class="img-restaurant" src="/Assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
         </header> 
         <main>
             <section class="lacarte">
                 <div class="titre_lacarte_coeur">                
                     <h1 class="titre_lacarte">À la française</h1>
+
+
+                    </h1>
                     <div class="coeur1">
-                        <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                       <i class="fa-solid fa-heart gris" aria-hidden="true"></i>
                     </div>
-                </div>                                     
-                <div class="entrees">                    
-                    <h2 class="subtitle_lacarte">ENTRÉES</h2>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Tartare de poulpe acidulé</h3>
-                        <p class="subtitle_menus">Aux zestes d'orange</p>
-                        <p class="prix">25<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Velouté de légumes d'antan</h3>
-                        <p class="subtitle_menus">Carotte, panais, topinambour</p>
-                        <p class="prix">35<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Soupe à l'oignon</h3>
-                        <p class="subtitle_menus">Revisitée</p>
-                        <p class="prix">20<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>                    
-                </div>                          
-                <div class="plats">                    
+                </div>                                        
+                <ul class="entrees">                    
+                    <h2 class="subtitle_lacarte">ENTRÉES</h2> 
+                    <a href="#">             
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">                            
+                                <h3 class="titre_menus">Tartare de poulpe acidulé</h3>
+                                <p class="subtitle_menus">Aux zestes d'orange</p>
+                            </div>
+                            <div class="prix"> 
+                                <p class="prix-txt">25€</p>                           
+                            </div>
+                            <div class="check">                                                       
+                                <i class="fa-solid fa-check-circle"></i>                                    
+                            </div>
+                        </div>
+                    </li>                          
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Velouté de légumes d'antan</h3>
+                                <p class="subtitle_menus">Carotte, panais, topinambour</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">35€</p>
+                            </div>
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Soupe à l'oignon</h3>
+                                <p class="subtitle_menus">Revisitée</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                </ul>                                                     
+                <ul class="plats">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Coquilles Saint-Jacques</h3>
-                        <p class="subtitle_menus">Accompagnées d'une purée de panais</p>
-                        <p class="prix">40<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt"> 
+                                <h3 class="titre_menus">Coquilles Saint-Jacques</h3>
+                                <p class="subtitle_menus">Accompagnées d'une purée de panais</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">40€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Magret de canard</h3>
+                                <p class="subtitle_menus">Et parmentier de pommes de terre</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">35€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <p class="subtitle_menus">Sur son lit de gnocchis aux légumes</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">44€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                </ul>
+                <ul class="desserts">                    
+                    <h2 class="subtitle_lacarte">DESSERTS</h2>                    
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Pétales de violettes glacés</h3>
+                                <p class="subtitle_menus">Et purée de noisettes</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">18€</p>
+                            </div>                                                                            
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Fondant au chocolat</h3>
+                                <p class="subtitle_menus">Revisité</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">22€</p>
+                            </div>                                                                           
+                            <div class="check">                       
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="menu">
+                        <div class="menuetprix">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Millefeuille croustillant</h3>
+                                <p class="subtitle_menus">Myrtilles et pâte d’amande</p>
+                            </div>
+                            <div class="prix">
+                                <p class="prix-txt">23€</p>
+                            </div>                                                                           
+                            <div class="check">                        
+                                <i class="fa-solid fa-check-circle"></i>
+                            </div>
+                        </div>                        
+                    </li>
                     </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Magret de canard</h3>
-                        <p class="subtitle_menus">Et parmentier de pommes de terre</p>
-                        <p class="prix">35<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Pigeonneau d’Ille-et-Vilaine</h3>
-                        <p class="subtitle_menus">Sur son lit de gnocchis aux légumes</p>
-                        <p class="prix">44<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                </div>
-                <div class="desserts">                    
-                    <h2 class="subtitle_lacarte">DESSERTS</h2>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Pétales de violettes glacés</h3>
-                        <p class="subtitle_menus">Et purée de noisettes</p>
-                        <p class="prix">18<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Fondant au chocolat</h3>
-                        <p class="subtitle_menus">Revisité</p>
-                        <p class="prix">22<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>                      
-                    </div>
-                    </a>
-                    <a href="#">
-                    <div class="menu">
-                        <h3 class="titre_menus">Millefeuille croustillant</h3>
-                        <p class="subtitle_menus">Myrtilles et pâte d’amande</p>
-                        <p class="prix">23<span class="euros">€</span></p>
-                        <a href="#">
-                        <button class="div-vert">                        
-                            <i class="fa-solid fa-check-circle"></i>
-                        </button>
-                        </a>
-                    </div>
-                    </a>
-                </div>
-                <div class="commander">                        
+                </ul>
+
+                <div class="commander">
+                    <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
-                        <abbr class="glass">Commander</abbr>
+                        <abbr class="glass">Commander</abbr></a>
                     </button>
+                    </a>
                 </div>
-                </a>
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
