--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -9,16 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&amp;family=Raleway&amp;family=Shrikhand&amp;display=swap&amp;_cacheOverride=1702719730117" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css?_cacheOverride=1702719730117" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="/Sass/main.css">
+    <link rel="stylesheet" href="Sass/main.css">
 </head>
 <body>
     <div class="main-container">
         <header>
             <div class="logopages">
-            <a href="/index.html"><i class="fa-solid fa-left-long"></i></a>
-            <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
+            <a href="index.html"><i class="fa-solid fa-left-long"></i></a>
+            <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
-            <img class="img-restaurant"  src="/Assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+            <img class="img-restaurant"  src="Assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
         </header> 
         <main>
             <section class="lacarte">
